2009-08-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Unnamed statements don't work with libpq 8 on 7.3 backend.
 - Guessing they require protocol 3.
2009-08-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - Create connection/transaction in run(), so only when needed.
 - Should fix test bailouts with 7.3 backends.
 - Makes it easier to catch & report connection failures better in the future.
 test/unit/test_cancel_query.cxx:
 - Pretty much nothing we can test about cancel_query, apart from no segfault.
2009-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - libpq versions without PQcancel don't have PGcancel either.
 - Never consider unnamed statement prepared, thanks Trigve Siver.
 test/unit/test_cancel_query.cxx:
 - Added test for cancel_query, thanks Don Madden.
 test/unit/test_prepared_statement.cxx:
 - Test less volatile unnamed prepared statement, thanks RhodiumToad.
2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Made cancel_query public, thanks Don Madden.
 - Hid support for pre-PQcancel libpq versions a bit deeper.
 - Try harder to be graceful about canceling deactivated connections.
2009-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Mark statement definition as complete when varargs are added.
2009-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Tiny warning fix for 7.3 libpq versions.
2009-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/robusttransaction.hxx, src/robusttransaction.cxx:
 - Redid robusttransaction logic; may actually work now.
 src/connection_base.cxx:
 - Use string::empty.
 test/test018.cxx, test/test037.cxx:
 - Better transactor names.
 tools/preprelease:
 - Keep absolute tarball path out of md5sum file.
2009-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/internal/callgate.hxx:
 - Cleaned up constness, thanks Kirit Saelensminde.